src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		IDENT=39, INT_CONSTANT=40, FLOAT_CONSTANT=41, CHARACTER=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_instrucciones = 1, RULE_instruccion = 2, RULE_campoStruct = 3, 
		RULE_camposStruct = 4, RULE_funcion = 5, RULE_typeOp = 6, RULE_argsFunc = 7, 
		RULE_defVariable = 8, RULE_sentencias = 9, RULE_sentencia = 10, RULE_exprOp = 11, 
		RULE_elseOp = 12, RULE_args = 13, RULE_expr = 14, RULE_tipo = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "instrucciones", "instruccion", "campoStruct", "camposStruct", 
			"funcion", "typeOp", "argsFunc", "defVariable", "sentencias", "sentencia", 
			"exprOp", "elseOp", "args", "expr", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "';'", "'struct'", "'{'", "'}'", "':'", "'('", "')'", 
			"','", "'='", "'return'", "'print'", "'printsp'", "'println'", "'read'", 
			"'if'", "'while'", "'else'", "'.'", "'['", "']'", "'*'", "'/'", "'%'", 
			"'+'", "'-'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", 
			"'!'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "IDENT", "INT_CONSTANT", "FLOAT_CONSTANT", "CHARACTER", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public InstruccionesContext instrucciones;
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((StartContext)_localctx).instrucciones = instrucciones();
			setState(33);
			match(EOF);
			((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).instrucciones.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public List<Instruction> list = new ArrayList<Instruction>();
		public InstruccionContext instruccion;
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << IDENT))) != 0)) {
				{
				{
				setState(36);
				((InstruccionesContext)_localctx).instruccion = instruccion();
				 _localctx.list.add(((InstruccionesContext)_localctx).instruccion.ast);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public Instruction ast;
		public DefVariableContext defVariable;
		public Token IDENT;
		public CamposStructContext camposStruct;
		public FuncionContext funcion;
		public DefVariableContext defVariable() {
			return getRuleContext(DefVariableContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public CamposStructContext camposStruct() {
			return getRuleContext(CamposStructContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				match(T__0);
				setState(45);
				((InstruccionContext)_localctx).defVariable = defVariable();
				setState(46);
				match(T__1);
				((InstruccionContext)_localctx).ast =  new GlobalVariable(((InstruccionContext)_localctx).defVariable.ast);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(T__2);
				setState(50);
				((InstruccionContext)_localctx).IDENT = match(IDENT);
				setState(51);
				match(T__3);
				setState(52);
				((InstruccionContext)_localctx).camposStruct = camposStruct();
				setState(53);
				match(T__4);
				setState(54);
				match(T__1);
				((InstruccionContext)_localctx).ast =  new Struct(((InstruccionContext)_localctx).IDENT,((InstruccionContext)_localctx).camposStruct.list);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				((InstruccionContext)_localctx).funcion = funcion();
				((InstruccionContext)_localctx).ast =  ((InstruccionContext)_localctx).funcion.ast;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CampoStructContext extends ParserRuleContext {
		public CampoStruct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CampoStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campoStruct; }
	}

	public final CampoStructContext campoStruct() throws RecognitionException {
		CampoStructContext _localctx = new CampoStructContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_campoStruct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((CampoStructContext)_localctx).IDENT = match(IDENT);
			setState(63);
			match(T__5);
			setState(64);
			((CampoStructContext)_localctx).tipo = tipo();
			setState(65);
			match(T__1);
			((CampoStructContext)_localctx).ast =  new CampoStruct(((CampoStructContext)_localctx).IDENT, ((CampoStructContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CamposStructContext extends ParserRuleContext {
		public List<CampoStruct> list = new ArrayList<CampoStruct>();
		public CampoStructContext campoStruct;
		public List<CampoStructContext> campoStruct() {
			return getRuleContexts(CampoStructContext.class);
		}
		public CampoStructContext campoStruct(int i) {
			return getRuleContext(CampoStructContext.class,i);
		}
		public CamposStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_camposStruct; }
	}

	public final CamposStructContext camposStruct() throws RecognitionException {
		CamposStructContext _localctx = new CamposStructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_camposStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				((CamposStructContext)_localctx).campoStruct = campoStruct();
				 _localctx.list.add(((CamposStructContext)_localctx).campoStruct.ast); 
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public Function ast;
		public Token IDENT;
		public ArgsFuncContext argsFunc;
		public TypeOpContext typeOp;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgsFuncContext argsFunc() {
			return getRuleContext(ArgsFuncContext.class,0);
		}
		public TypeOpContext typeOp() {
			return getRuleContext(TypeOpContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((FuncionContext)_localctx).IDENT = match(IDENT);
			setState(76);
			match(T__6);
			setState(77);
			((FuncionContext)_localctx).argsFunc = argsFunc();
			setState(78);
			match(T__7);
			setState(79);
			((FuncionContext)_localctx).typeOp = typeOp();
			setState(80);
			match(T__3);
			setState(81);
			((FuncionContext)_localctx).sentencias = sentencias();
			setState(82);
			match(T__4);
			((FuncionContext)_localctx).ast =  new Function(((FuncionContext)_localctx).IDENT,((FuncionContext)_localctx).argsFunc.list,((FuncionContext)_localctx).typeOp.ast,((FuncionContext)_localctx).sentencias.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeOpContext extends ParserRuleContext {
		public Type ast;
		public TipoContext tipo;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TypeOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeOp; }
	}

	public final TypeOpContext typeOp() throws RecognitionException {
		TypeOpContext _localctx = new TypeOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(85);
				match(T__5);
				setState(86);
				((TypeOpContext)_localctx).tipo = tipo();
				((TypeOpContext)_localctx).ast =  ((TypeOpContext)_localctx).tipo.ast;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsFuncContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public DefVariableContext defVariable;
		public List<DefVariableContext> defVariable() {
			return getRuleContexts(DefVariableContext.class);
		}
		public DefVariableContext defVariable(int i) {
			return getRuleContext(DefVariableContext.class,i);
		}
		public ArgsFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argsFunc; }
	}

	public final ArgsFuncContext argsFunc() throws RecognitionException {
		ArgsFuncContext _localctx = new ArgsFuncContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argsFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(91);
				((ArgsFuncContext)_localctx).defVariable = defVariable();
				_localctx.list.add(((ArgsFuncContext)_localctx).defVariable.ast);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(93);
					match(T__8);
					setState(94);
					((ArgsFuncContext)_localctx).defVariable = defVariable();
					_localctx.list.add(((ArgsFuncContext)_localctx).defVariable.ast);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVariableContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVariable; }
	}

	public final DefVariableContext defVariable() throws RecognitionException {
		DefVariableContext _localctx = new DefVariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_defVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			((DefVariableContext)_localctx).IDENT = match(IDENT);
			setState(105);
			match(T__5);
			setState(106);
			((DefVariableContext)_localctx).tipo = tipo();
			((DefVariableContext)_localctx).ast =  new DefVariable(((DefVariableContext)_localctx).IDENT, ((DefVariableContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__30) | (1L << T__34) | (1L << IDENT) | (1L << INT_CONSTANT) | (1L << FLOAT_CONSTANT) | (1L << CHARACTER))) != 0)) {
				{
				{
				setState(109);
				((SentenciasContext)_localctx).sentencia = sentencia();
				 _localctx.list.add(((SentenciasContext)_localctx).sentencia.ast);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentence ast;
		public DefVariableContext defVariable;
		public ExprContext l;
		public ExprContext r;
		public ExprOpContext exprOp;
		public ExprContext expr;
		public SentenciasContext sentencias;
		public ElseOpContext elseOp;
		public Token IDENT;
		public ArgsContext args;
		public DefVariableContext defVariable() {
			return getRuleContext(DefVariableContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprOpContext exprOp() {
			return getRuleContext(ExprOpContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public ElseOpContext elseOp() {
			return getRuleContext(ElseOpContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentencia);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(T__0);
				setState(118);
				((SentenciaContext)_localctx).defVariable = defVariable();
				setState(119);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new LocalVariable(((SentenciaContext)_localctx).defVariable.ast) ;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				((SentenciaContext)_localctx).l = expr(0);
				setState(123);
				match(T__9);
				setState(124);
				((SentenciaContext)_localctx).r = expr(0);
				setState(125);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new Assignment(((SentenciaContext)_localctx).l.ast,((SentenciaContext)_localctx).r.ast);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				match(T__10);
				setState(129);
				((SentenciaContext)_localctx).exprOp = exprOp();
				setState(130);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new Return(((SentenciaContext)_localctx).exprOp.ast);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				match(T__11);
				setState(134);
				((SentenciaContext)_localctx).exprOp = exprOp();
				setState(135);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new Print(((SentenciaContext)_localctx).exprOp.ast);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				match(T__12);
				setState(139);
				((SentenciaContext)_localctx).exprOp = exprOp();
				setState(140);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new PrintSp(((SentenciaContext)_localctx).exprOp.ast);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				match(T__13);
				setState(144);
				((SentenciaContext)_localctx).exprOp = exprOp();
				setState(145);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new PrintLn(((SentenciaContext)_localctx).exprOp.ast);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(148);
				match(T__14);
				setState(149);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(150);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new Read(((SentenciaContext)_localctx).expr.ast);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				match(T__15);
				setState(154);
				match(T__6);
				setState(155);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(156);
				match(T__7);
				setState(157);
				match(T__3);
				setState(158);
				((SentenciaContext)_localctx).sentencias = sentencias();
				setState(159);
				match(T__4);
				setState(160);
				((SentenciaContext)_localctx).elseOp = elseOp();
				((SentenciaContext)_localctx).ast =  new If(((SentenciaContext)_localctx).expr.ast,((SentenciaContext)_localctx).sentencias.list,((SentenciaContext)_localctx).elseOp.list);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(163);
				match(T__16);
				setState(164);
				match(T__6);
				setState(165);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(166);
				match(T__7);
				setState(167);
				match(T__3);
				setState(168);
				((SentenciaContext)_localctx).sentencias = sentencias();
				setState(169);
				match(T__4);
				((SentenciaContext)_localctx).ast =  new While(((SentenciaContext)_localctx).expr.ast,((SentenciaContext)_localctx).sentencias.list);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(172);
				((SentenciaContext)_localctx).IDENT = match(IDENT);
				setState(173);
				match(T__6);
				setState(174);
				((SentenciaContext)_localctx).args = args();
				setState(175);
				match(T__7);
				setState(176);
				match(T__1);
				((SentenciaContext)_localctx).ast =  new CallFunctionSentence(((SentenciaContext)_localctx).IDENT,((SentenciaContext)_localctx).args.list);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprOpContext extends ParserRuleContext {
		public Expression ast;
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprOp; }
	}

	public final ExprOpContext exprOp() throws RecognitionException {
		ExprOpContext _localctx = new ExprOpContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_exprOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__30) | (1L << T__34) | (1L << IDENT) | (1L << INT_CONSTANT) | (1L << FLOAT_CONSTANT) | (1L << CHARACTER))) != 0)) {
				{
				setState(181);
				((ExprOpContext)_localctx).expr = expr(0);
				((ExprOpContext)_localctx).ast =  ((ExprOpContext)_localctx).expr.ast;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseOpContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenciasContext sentencias;
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public ElseOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseOp; }
	}

	public final ElseOpContext elseOp() throws RecognitionException {
		ElseOpContext _localctx = new ElseOpContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_elseOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				{
				setState(186);
				match(T__17);
				setState(187);
				match(T__3);
				setState(188);
				((ElseOpContext)_localctx).sentencias = sentencias();
				setState(189);
				match(T__4);
				 ((ElseOpContext)_localctx).list =  ((ElseOpContext)_localctx).sentencias.list;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
